# python-flipcards-learner

./: .env.template  .gitignore  LICENSE  README.md  flipcards.db  flipnlearn_dump.sql  load_test.py  nohup.out  progressnotes.md  pyproject.toml  requirements.txt  run.sh  service-wrapper.sh  stop.sh
.github/workflows/: deploy.yml  format-and-lint.yml  tests.yml
app/: crud.py  database.py  enums.py  main.py  models.py  schemas.py
app/routes/: cards.py
app/static/: style.css
app/templates/: base.html  index.html  learn.html
frontend/flip-cards-learner/: README.md  index.html  package-lock.json  package.json
frontend/flip-cards-learner/cypress/e2e/: example.cy.js  flipcardstest.cy.js  jsconfig.json
frontend/flip-cards-learner/src/: App.vue  assetService.js
frontend/flip-cards-learner/src/assets/: main.css
frontend/flip-cards-learner/src/components/: HelloWorld.vue  Learn.vue  TheWelcome.vue
frontend/flip-cards-learner/src/components/icons/: IconAzure.vue  IconDSA.vue  IconDocker.vue  IconGitHubAction.vue  IconHTML.vue  IconLinux.vue  IconOOP.vue
frontend/flip-cards-learner/src/router/: index.js
frontend/flip-cards-learner/src/views/: CardsView.vue  LearnView.vue
src/app/: config.py  crud.py  database.py  enums.py  main.py  models.py  schemas.py
src/app/routes/: cards.py
src/app/tests/: conftest.py  database_test.py  test_cards.py
src/app/utils/: assets.py  s3.py  s3_logger.py
